# aidcam-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
aidcam_tools/: __init__.py  fdi.py  mesh_to_pointcloud.py  metrics.py
tests/: test_fdi.py  test_metrics.py
